# Iridium

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
.github/workflows/: release.yml
src/: App.svelte  app.rs  build.rs  crossterm.rs  load_profile.rs  main.rs  main.ts  mod_operations.rs  save_profile.rs  test.rs  test.txt  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mod_operations.rs
src/github_integration/: fetch_file_contents.rs  fetch_repo_contents.rs  mod.rs  repo_content.rs
src/profile_manager/: import_mods.rs  load_profile.rs  mod.rs  profile.rs  save_profile.rs
