[package]
name = "FeriumManager"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "^0.19"
egui = "^0.28"
eframe = "^0.28"
egui_extras = { version = "^0.28.1", features = ["all_loaders"] }
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4.22"
rfd = "0.14.1"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
