[package]
name = "Iridium"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "^0.19"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4.22"
rfd = "0.14.1"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ratatui = "0.27.0"
color-eyre = "0.6.3"
rand = "0.8.5"
argh = "0.1.12"
crossterm = "0.27.0"
tui-textarea = "0.5.1"
chrono = "0.4.38"
arboard = "3.4.0"
